--- a/css/style.css
+++ b/css/style.css
@@ -464,6 +464,69 @@ footer {
         font-size: 20px;
         text-transform: capitalize;
       }
+/* INDEX */
+      #portfolioContainerIndex{
+        height: auto;
+        width: 90%;
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+        margin: auto;   
+        padding-bottom: 20px; 
+        padding: 0; 
+        gap: 0;
+      }
+      #portfolioContainerIndex a{
+        list-style: none;
+        text-decoration: none;
+        color: white;
+      }
+      #portfolioContainerIndex .cajasPortfolio{
+        height: auto;
+        max-width: 20rem;
+        margin: 0px;
+        padding: 0px;
+        gap: 0;        
+        display: flex;
+        justify-content: center;
+        align-items: center;
+      }#portfolioContainerIndex .cajasPortfolio img{
+        height: auto;
+        width: 100%;
+        object-fit: cover;       
+      }
+      #portfolioContainerIndex .cajaDetallePortfolio{
+        height: 300px;
+        width: 300px;
+        position: absolute;
+        align-self: center;
+        color: white;
+        background: rgba(29, 29, 29, 0.864);
+        margin-bottom: 10px;
+        border-radius: 5px;
+        opacity: 0;
+        transition-timing-function: ease-out;
+        transition: 0.5s; 
+      }
+      #portfolioContainerIndex .cajaDetallePortfolio:hover{
+        opacity: 100;
+        transform: scale(0.90);
+        border-radius: 15px;
+      }
+      #portfolioContainerIndex .cajaDetallePortfolio h1{
+        width: 70%;
+        margin: auto;
+        margin-top: 30%;
+        margin-bottom: 10px;
+        font-size: 2rem;
+        font-family: milker;
+      }#portfolioContainerIndex .cajaDetallePortfolio p{
+        margin: auto;
+        font-family: montserrat;
+        font-size: 20px;
+        text-transform: capitalize;
+        text-align: center;
+      }
 
 .servicios {
   background-image: url(../assets/img/fondoNegro.webp);
