--- a/css/style.css
+++ b/css/style.css
@@ -1059,6 +1059,8 @@ footer {
  padding-top: 50px;
 }
 
+/* MERCH PAGE /////////////////////////// */
+
 .fondoMerch{
   height: 400px;
   text-align: center;
@@ -1073,15 +1075,19 @@ footer {
   padding-top: 200px;
   font-size: 90px;
 }
-
 .merchSection{
   height: auto;
   width: 100%;
   background-color: rgb(224, 221, 221);
   color: black;
   padding: 40px 0px 80px 0px;
+  display: flex;
+  justify-content: space-between;
+  align-items: top;
 }
-.productBoxes{
+#productBoxes{
+  max-width: 70%;
+  margin: auto;
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
@@ -1095,7 +1101,7 @@ footer {
   width: 220px;
   background-color: white;
   padding: 10px 10px 10px 10px;
-  border-radius: 5px;
+  border-radius: 10px;
 }
 .product img{
   height: 200px;
@@ -1115,11 +1121,117 @@ footer {
   font-family: "montserrat";
   color: white;
   border-radius: 5px;
-  margin: 15px 0px 0px 10px;
+  margin: 15px 0px 10px 10px;
   transition: 0.2s;
   transition-timing-function: ease-out;
 }.formProduct input:hover{
   background-color: #E7328A;
+}
+
+#modal-cart{
+  max-height: 600px;
+  min-width: 400px;  
+  background-color: white;
+  margin-right: 50px;
+  border-radius: 20px;
+  color: black;
+  font-family: "montserrat";
+  overflow:auto
+}
+.nav-modal{
+  height: 50px;
+  width: 380px;
+  display: flex;
+  justify-content: space-around;
+  gap: 60px;
+  align-items: center;
+  font-weight: bold;
+  padding: 30px 5px 30px 5px;
+  background-color: white;
+  position: absolute;
+  border-top-left-radius: 20px;
+  border-top-right-radius: 0px;
+}.nav-modal img{
+  height: 25px;
+  width: 25px;
+  align-self: center;
+  text-align: center;
+}.nav-modal a img{
+  background-color: rgb(0, 0, 0);
+  border-radius: 25px;
+  height: 20px;
+  width: 20px;
+}
+#added-products{
+  margin-top: 60px;
+}
+#added-item-box{
+  height: 150px;
+  width: 95%;
+  background-color: rgb(241, 241, 241);
+  display: flex;  
+  justify-content: space-around;
+  align-items: center;
+  margin: 5px 0px 5px 0px;
+}
+.img-item-cart img{
+  height: 120px;
+  width: 110px;
+  padding: 10px 0px 10px 10px;
+}
+.item-cart p{
+  font-weight: bold;
+}
+.item-cart span{
+  font-size: 25px;
+  color: #E7328A;
+  border:  2px solid #E7328A;
+  border-radius: 25px;
+  padding: 5px;
+}
+.item-cant span{
+  font-size: 20px;
+  font-weight: bold;
+}
+.item-cant input{
+  width: 30px;
+  height: 30px;
+  border: 2px solid black;
+  border-radius: 25px;
+  margin: 10px;
+  font-weight: bold;
+}
+.item-cant input:hover{
+ background-color: #a0a0a0;
+}
+.footer-modal{
+  display: flex;
+  justify-content: space-evenly;
+  background-color: white;
+  height: 40px;
+  width: 95%;
+  margin: 15px 0px 15px 0px;
+}.footer-modal button{
+  padding: 10px 20px 10px 20px;
+  border-radius: 20px;
+  font-size: 20px;
+  align-self: center;
+}#vaciarCarrito{
+  background-color: rgb(249, 51, 51);
+  color: white;
+  border: 0px;
+}#vaciarCarrito:hover{
+  background-color: rgb(251, 106, 106);
+}
+#comprar{
+  background-color: #0f9800;
+  color: white;
+  border: 0px;
+}#comprar:hover{
+  background-color: #abff66;
+}
+.cart-none{
+  display: none;
 }
 
 @media only screen and (max-width: 1400px) {
